@@ -1,10 +1,10 @@
 # [% name %]
-[% IF vcs.status || distribution.cpan || orphaned || packaging.debian %]
+[% IF vcs.status || distribution.cpan || orphaned || distribution.packaging.debian %]
 [% IF orphaned %][![No maintenance intended](http://unmaintained.tech/badge.svg)](http://unmaintained.tech/) [% END -%]
 [% IF vcs.status.travis %][![Build status](https://travis-ci.org/[% vcs.status.travis %].svg?branch=master)](https://travis-ci.org/[% vcs.status.travis %]) [% END -%]
 [% IF vcs.status.workflow %][![Build status](https://github.com/[% vcs.github %]/workflows/[% vcs.status.workflow %]/badge.svg)](https://github.com/[% vcs.github %]/actions) [% END -%]
 [% IF distribution.cpan %][![CPAN version](https://img.shields.io/cpan/v/[% distribution.cpan %])](https://metacpan.org/release/[% distribution.cpan %])[% IF vcs.github %] [![License](https://img.shields.io/cpan/l/[% distribution.cpan %])](https://github.com/[% vcs.github %]/blob/master/LICENSE)[% END %] [% END -%]
-[% IF packaging.debian %][![Debian package](https://img.shields.io/debian/v/[% packaging.debian %]/unstable)](https://tracker.debian.org/pkg/[% packaging.debian %])[% END -%]
+[% IF distribution.packaging.debian %][![Debian package](https://img.shields.io/debian/v/[% distribution.packaging.debian %]/unstable)](https://tracker.debian.org/pkg/[% distribution.packaging.debian %])[% END -%]
 
 [% END %]
 [% FOREACH copr IN copyrights %]Copyright [% copr.years %]
