@@ -35,6 +35,8 @@ build:
     average and uptime information.
   type: Autoconf
 distribution:
+  packaging:
+    debian: lbcd
   section: system
   tarname: lbcd
   version: lbcd
@@ -42,8 +44,6 @@ debian:
   summary: |
     A Debian package is included in Debian 5.0 (lenny) and later releases.
     Thanks to Guido Guenther for doing the initial upload to Debian.
-packaging:
-  debian: lbcd
 support:
   email: eagle@eyrie.org
   listname: lbnamed-users
