@@ -41,11 +41,11 @@ debian:
     against the MIT Kerberos libraries and the latter against the Heimdal
     libraries.
 distribution:
+  packaging:
+    debian: libpam-krb5
   section: kerberos
   tarname: pam-krb5
   version: pam-krb5
-packaging:
-  debian: libpam-krb5
 support:
   email: eagle@eyrie.org
   github: rra/pam-krb5
