@@ -165,6 +165,14 @@ description: |
   Also present, as `docs/design.html`, is the original design document (now
   somewhat out of date).
 distribution:
+  packaging:
+    debian: remctl
+    extra: |
+      For those using Puppet, there is a
+      [Puppet module](https://forge.puppetlabs.com/ccin2p3/remctl)
+      available for installing the remctl server and managing server
+      configurations.  This was written and is maintained by the IN2P3 Computing
+      Centre; see that page for more information.
   section: kerberos
   tarname: remctl
   version: remctl
@@ -225,14 +233,6 @@ license:
   name: Expat
 maintainer: Russ Allbery <eagle@eyrie.org>
 name: remctl
-packaging:
-  debian: remctl
-  extra: |
-    For those using Puppet, there is a
-    [Puppet module](https://forge.puppetlabs.com/ccin2p3/remctl)
-    available for installing the remctl server and managing server
-    configurations.  This was written and is maintained by the IN2P3 Computing
-    Centre; see that page for more information.
 quote:
   author: Peter Marshall
   text: |
